--- a/src/app/elite/elite-auth/elite-auth.component.html
+++ b/src/app/elite/elite-auth/elite-auth.component.html
@@ -12,9 +12,9 @@
         <button mat-raised-button (click)="auth.googleSignin()">
             <i class="fa fa-google"></i> Connect Google
         </button>
-        <button mat-raised-button (click)="auth.facebookSignin()">
+        <!-- <button mat-raised-button (click)="auth.facebookSignin()">
             <i class="fa fa-google"></i> Connect FaceBook
-        </button>
+        </button> -->
     </div>
 </ng-template>
 
