--- a/src/app/elite/elite.component.html
+++ b/src/app/elite/elite.component.html
@@ -1,7 +1,7 @@
 <div class="mainContainer disable-dbl-tap-zoom">
     <!-- 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 LOGO 🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐🧐 -->
     <div class="logo-miami" style="background-image: url(./assets/img/elite/header.jpg);background-size: contain;">
-        <img class="logo" src="./assets/img/elite/logow.png">
+        <img style="width: 300px;" src="./assets/img/elite/logoElite.JPG">
         <p style="animation: swing 200ms ease-in-out 100ms forwards; padding-top: 20px;">{{title}}</p><br>
         <!-- <p style="color: rgb(255, 55, 255);animation: swing 200ms ease-in-out 100ms forwards">RIDES</p> -->
     </div>
