--- a/src/app/elite/elite.component.scss
+++ b/src/app/elite/elite.component.scss
@@ -59,7 +59,7 @@
             flex-direction: column;
             align-items: center;
             color: white;
-            font-family: Miami;
+            // font-family: Miami;
             padding-top: 20px;
             background-color: black;
             width: 100%;
@@ -268,7 +268,7 @@
             flex-direction: column;
             align-items: center;
             color: rgb(255, 255, 255);
-            font-family: Miami;
+            // font-family: Miami;
             padding-top: 20px;
             background-color: black;
             width: 100%;
