--- a/src/app/bmx/bmx-creator/bmx-creator.component.scss
+++ b/src/app/bmx/bmx-creator/bmx-creator.component.scss
@@ -1256,3 +1256,8 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 .directorCard {
     width: 50%;
 }
+
+.mat-success {
+    background-color: green;
+    color: #fff;
+}
